Add background picture to Home component.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -324,7 +324,7 @@ html {
 
   .welcome-container__general-info {
     padding: 0;
-    margin-bottom: 6rem;
+    margin-top: 6rem;
     font-size: var(--font-2-2); }
 
   .welcome-content-container {
