--- a/src/css/pages/Home.scss
+++ b/src/css/pages/Home.scss
@@ -114,7 +114,8 @@
 
     .welcome-container__general-info {
         padding: 0;
-        margin-bottom: 6rem;
+        // margin-bottom: 6rem;
+        margin-top: 6rem;
         font-size: var(--font-2-2);
     }
 
