--- a/src/css/pages/Home.css
+++ b/src/css/pages/Home.css
@@ -89,7 +89,7 @@
 
   .welcome-container__general-info {
     padding: 0;
-    margin-bottom: 6rem;
+    margin-top: 6rem;
     font-size: var(--font-2-2); }
 
   .welcome-content-container {
