--- a/src/css/reservation-form/StepThree.css
+++ b/src/css/reservation-form/StepThree.css
@@ -15,6 +15,10 @@
 .step-three__header {
   font-size: var(--font-2-6); }
 
+.step-three__header-pb-2 {
+  display: block;
+  padding-bottom: 2rem; }
+
 .step-three__reservation-date-picker-container {
   display: grid;
   grid-template-columns: 1fr;
