--- a/src/css/reservation-form/StepThree.scss
+++ b/src/css/reservation-form/StepThree.scss
@@ -19,6 +19,11 @@
     font-size: var(--font-2-6);
 }
 
+.step-three__header-pb-2 {
+    display: block;
+    padding-bottom: 2rem;
+}
+
 .step-three__reservation-date-picker-container {
     // width: 50%;
     display: grid;
