--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -14,6 +14,7 @@
 @import 'reservation-form/StepFive';
 @import 'reservation-form/StepSix';
 @import 'reservation-form/StepSeven';
+@import 'reservation-form/NewForm';
 @import 'components/NavBar';
 @import 'components/Top';
 @import 'components/ReservationForm';
