--- a/src/css/reservation-form/NewForm.scss
+++ b/src/css/reservation-form/NewForm.scss
@@ -1,3 +1,13 @@
+.new-form-step-two__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.new-form-step-two__new-form-step-form-container {
+    background-color: #fff;
+    padding: 2.5rem;
+}
+
 @media only screen and (min-width: 768px) {
     .new-form-step-two__outer-container {
         width: 100%;
