--- a/src/css/reservation-form/NewForm.css
+++ b/src/css/reservation-form/NewForm.css
@@ -1,10 +1,19 @@
 .new-form-step-two__container {
   display: grid;
-  grid-template-columns: 1fr 1fr; }
+  grid-template-columns: 1fr 1fr;
+  background-color: var(--color-white);
+  box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
+
+.new-form-step-two__new-form-step-form-container {
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px; }
 
 .new-form-step-two__new-form-step-form-container {
   background-color: #fff;
   padding: 2.5rem; }
+
+.new-form-step-two__header {
+  font-size: var(--font-2-6); }
 
 @media only screen and (min-width: 768px) {
   .new-form-step-two__outer-container {
