--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1099,14 +1099,11 @@ html {
   display: grid;
   grid-template-columns: 1fr 1fr;
   background-color: var(--color-white);
-  box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
-
-.new-form-step-two__new-form-step-form-container {
+  box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09);
   border-top-left-radius: 6px;
   border-bottom-left-radius: 6px; }
 
 .new-form-step-two__new-form-step-form-container {
-  background-color: #fff;
   padding: 2.5rem; }
 
 .new-form-step-two__header {
@@ -1117,7 +1114,6 @@ html {
     width: 100%;
     margin-right: 2%;
     position: relative;
-    background-color: var(--color-white);
     box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09);
     margin-top: -130px;
     padding: 2.5rem;
