--- a/src/css/reservation-form/NewForm.scss
+++ b/src/css/reservation-form/NewForm.scss
@@ -3,15 +3,17 @@
     grid-template-columns: 1fr 1fr;
     background-color: var(--color-white);
     box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09);
-}
-
-.new-form-step-two__new-form-step-form-container{
     border-top-left-radius: 6px;
     border-bottom-left-radius: 6px;
 }
 
+// .new-form-step-two__new-form-step-form-container{
+//     border-top-left-radius: 6px;
+//     border-bottom-left-radius: 6px;
+// }
+
 .new-form-step-two__new-form-step-form-container {
-    background-color: #fff;
+    // background-color: #fff;
     padding: 2.5rem;
 }
 
@@ -26,7 +28,7 @@
         position: relative;
         // margin-top: 0;
         // padding: 1.6rem;
-        background-color: var(--color-white);
+        // background-color: var(--color-white);
         box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09);
         // width: 43%;
         margin-top: -130px;
