--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1098,15 +1098,17 @@ html {
 .new-form-step-two__container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  background-color: var(--color-white);
-  box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09);
-  border-top-left-radius: 6px;
-  border-bottom-left-radius: 6px; }
+  box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
 
 .new-form-step-two__new-form-step-form-container {
+  background-color: var(--color-white);
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
   padding: 2.5rem; }
 
 .new-form-step-two__header {
+  display: block;
+  margin-bottom: 2rem;
   font-size: var(--font-2-6); }
 
 @media only screen and (min-width: 768px) {
