Add price container to StepTwo on ReservationPage.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -209,6 +209,9 @@ body, p {
 html {
   font-size: 62.5%; }
 
+.mb-1 {
+  margin-bottom: 1rem; }
+
 .mb-16 {
   margin-bottom: 16px; }
 
@@ -1154,6 +1157,9 @@ html {
 html {
   font-size: 62.5%; }
 
+.mb-1 {
+  margin-bottom: 1rem; }
+
 .mb-16 {
   margin-bottom: 16px; }
 
@@ -1394,6 +1400,9 @@ html {
 
 html {
   font-size: 62.5%; }
+
+.mb-1 {
+  margin-bottom: 1rem; }
 
 .mb-16 {
   margin-bottom: 16px; }
