Work on StepThree: make it calculate the trip cost and show directions on the map within the same step.

--- a/src/css/reservation-form/StepOne.css
+++ b/src/css/reservation-form/StepOne.css
@@ -57,6 +57,9 @@
   .reservation-form__submit-btn {
     padding: 1.6rem 2rem; }
 
+  .reservation-form__submit-btn--new-form {
+    padding: 1.6rem 2rem; }
+
   .reservation-form__submit-btn--no-margin {
     margin-top: 0; }
 
