--- a/src/css/main.css
+++ b/src/css/main.css
@@ -730,6 +730,9 @@ html {
   .reservation-form__submit-btn {
     padding: 1.6rem 2rem; }
 
+  .reservation-form__submit-btn--new-form {
+    padding: 1.6rem 2rem; }
+
   .reservation-form__submit-btn--no-margin {
     margin-top: 0; }
 
