--- a/src/css/reservation-form/ReservationFormShared.scss
+++ b/src/css/reservation-form/ReservationFormShared.scss
@@ -1,3 +1,7 @@
+.reservation-form__back-container {
+    
+}
+
 .reservation-form__input-label {
     font-size: var(--font-1-3);
     color: var(--color-input-label);
