Style back container for the Reservation Form.

--- a/src/css/reservation-form/ReservationFormShared.scss
+++ b/src/css/reservation-form/ReservationFormShared.scss
@@ -1,5 +1,17 @@
 .reservation-form__back-container {
-    
+    font-size: 1.6rem;
+}
+
+.back-container__back-text {
+    color: #535353;
+}
+
+.back-container__step-text {
+    color: #000;
+}
+
+.back-container__of-steps-text {
+    color: #dcdcdc;
 }
 
 .reservation-form__input-label {
