--- a/src/css/reservation-form/ReservationFormShared.css
+++ b/src/css/reservation-form/ReservationFormShared.css
@@ -1,3 +1,15 @@
+.reservation-form__back-container {
+  font-size: 1.6rem; }
+
+.back-container__back-text {
+  color: #535353; }
+
+.back-container__step-text {
+  color: #000; }
+
+.back-container__of-steps-text {
+  color: #dcdcdc; }
+
 .reservation-form__input-label {
   font-size: var(--font-1-3);
   color: var(--color-input-label);
