--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1118,6 +1118,11 @@ html {
   grid-template-columns: 1fr 1fr;
   box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
 
+.new-form__step-header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 2rem; }
+
 .new-form-step-two__new-form-step-form-container {
   background-color: var(--color-white);
   border-top-left-radius: 6px;
