--- a/src/css/reservation-form/NewForm.scss
+++ b/src/css/reservation-form/NewForm.scss
@@ -4,10 +4,11 @@
     box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09);
 }
 
-// .new-form-step-two__new-form-step-form-container{
-//     border-top-left-radius: 6px;
-//     border-bottom-left-radius: 6px;
-// }
+.new-form__step-header {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+}
 
 .new-form-step-two__new-form-step-form-container {
     // background-color: #fff;
