Move input data from header to a new container.

--- a/src/css/reservation-form/NewForm.scss
+++ b/src/css/reservation-form/NewForm.scss
@@ -6,8 +6,8 @@
 
 .new-form__step-header {
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 2rem;
+    // justify-content: space-between;
+    // margin-bottom: 2rem;
 }
 
 .new-form-step-two__new-form-step-form-container {
