--- a/src/css/reservation-form/NewForm.css
+++ b/src/css/reservation-form/NewForm.css
@@ -4,9 +4,7 @@
   box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
 
 .new-form__step-header {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 2rem; }
+  display: flex; }
 
 .new-form-step-two__new-form-step-form-container {
   background-color: var(--color-white);
