--- a/src/css/components.css
+++ b/src/css/components.css
@@ -16,14 +16,19 @@ body, p {
 .rounded {
   border-radius: 6px; }
 
-#mapDiv > div > div > div:nth-child(10) {
-  display: none !important; }
+.google-map-iframe {
+  width: 100%;
+  height: 100%;
+  min-height: 30rem; }
 
 .directions-card {
   display: none !important; }
 
 @media only screen and (min-width: 768px) {
   .rounded-desktop {
-    border-radius: 6px; } }
+    border-radius: 6px; }
+
+  .google-map-iframe {
+    min-height: auto; } }
 
 /*# sourceMappingURL=components.css.map */
