--- a/src/css/components.scss
+++ b/src/css/components.scss
@@ -21,9 +21,15 @@ body, p {
     border-radius: 6px;
 }
 
-#mapDiv > div > div > div:nth-child(10) {
-    display: none !important;
+.google-map-iframe {
+    width: 100%;
+    height: 100%;
+    min-height: 30rem;
 }
+
+// #mapDiv > div > div > div:nth-child(10) {
+//     display: none !important;
+// }
 
 .directions-card {
     display: none !important;
@@ -32,5 +38,9 @@ body, p {
 @media only screen and (min-width: 768px) {
     .rounded-desktop {
         border-radius: 6px;
+    }
+
+    .google-map-iframe {
+        min-height: auto;
     }
 }
