--- a/src/css/components/Mission.css
+++ b/src/css/components/Mission.css
@@ -4,27 +4,22 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  background-color: var(--color-light-blue);
-}
+  background-color: var(--color-light-blue); }
 
 .home-content__mission-container {
   display: flex;
-  flex-direction: column;
-}
+  flex-direction: column; }
 
 .mission-container__mission-photo {
-  width: 100%;
-}
+  width: 100%; }
 
 .mission-container__mission-content {
   width: 100%;
-  padding: 16px;
-}
+  padding: 16px; }
 
 .mission-content__text {
   font-size: var(--font-1-8);
-  line-height: var(--line-150);
-}
+  line-height: var(--line-150); }
 
 @media only screen and (min-width: 1024px) {
   .home-content__mission-container {
@@ -32,18 +27,14 @@
     max-width: 1280px;
     padding-top: 80px;
     padding-bottom: 80px;
-    flex-direction: row;
-  }
+    flex-direction: row; }
 
   .mission-container__mission-photo {
-    width: 50%;
-  }
+    width: 50%; }
 
   .mission-container__mission-content {
     width: 50%;
     padding: 0;
-    margin-left: 3rem;
-  }
-}
+    margin-left: 3rem; } }
 
 /*# sourceMappingURL=Mission.css.map */
