--- a/src/css/reservation-form/NewForm.scss
+++ b/src/css/reservation-form/NewForm.scss
@@ -22,6 +22,12 @@
     font-size: var(--font-2-6);
 }
 
+.new-form__return-time-container {
+    grid-column-start: 2;
+    grid-column-end: 4;
+    align-items: center;
+}
+
 @media only screen and (min-width: 768px) {
     .new-form-step-two__outer-container {
         width: 100%;
