Make active link take 100% of the header height.

--- a/src/css/components/NavBar.scss
+++ b/src/css/components/NavBar.scss
@@ -84,6 +84,7 @@
 }
 
 .navbar-links__navbar-link {
+    height: 100%;
     font-size: var(--font-1-6);
     // color: var(--color-button);
     text-decoration: underline;
