--- a/src/css/main.css
+++ b/src/css/main.css
@@ -727,7 +727,9 @@ html {
   margin-bottom: 1rem;
   border: 1px solid var(--color-input-border);
   font-size: 15px;
-  background-color: var(--color-input-background); }
+  background-color: var(--color-input-background);
+  -moz-appearance: none;
+  -webkit-appearance: none; }
 
 .reservation-form__input--no-margin {
   margin-bottom: 0; }
