--- a/src/css/reservation-form/StepOne.scss
+++ b/src/css/reservation-form/StepOne.scss
@@ -42,6 +42,8 @@
     border: 1px solid var(--color-input-border);
     font-size: 15px;
     background-color: var(--color-input-background);
+    -moz-appearance: none;
+    -webkit-appearance: none;
 }
 
 .reservation-form__input--no-margin {
