Add margin-bottom for .reservation-form__reservation-footer-price-container, also start changing reservation form from display grid to display flex.

--- a/src/css/reservation-form/ReservationFormShared.scss
+++ b/src/css/reservation-form/ReservationFormShared.scss
@@ -24,6 +24,10 @@
     margin-bottom: 0;
 }
 
+.reservation-form__reservation-footer-price-container {
+    margin-bottom: 1rem;
+}
+
 .reservation-footer-price-container__total {
     font-size: var(--font-2-2);
 }
