--- a/src/css/main.css
+++ b/src/css/main.css
@@ -169,7 +169,7 @@ body, p {
 .google-map-iframe {
   width: 100%;
   height: 100%;
-  min-height: 30rem; }
+  min-height: 40rem; }
 
 .directions-card {
   display: none !important; }
@@ -679,6 +679,9 @@ html {
 .reservation-form__input-label--no-margin {
   margin-bottom: 0; }
 
+.reservation-form__reservation-footer-price-container {
+  margin-bottom: 1rem; }
+
 .reservation-footer-price-container__total {
   font-size: var(--font-2-2); }
 
@@ -778,7 +781,8 @@ html {
   .reservation-form__submit-text {
     font-size: 1.6rem; } }
 .reservation-form__step-two {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   background-color: var(--color-white);
   box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
 
@@ -814,8 +818,11 @@ html {
 
 @media only screen and (min-width: 768px) {
   .reservation-form__step-two {
-    grid-template-columns: 1fr 1fr;
+    flex-direction: row;
     border-radius: 6px; }
+
+  .step-two__outer-container {
+    width: 50%; }
 
   .step-two__form {
     padding: 2.5rem; } }
