--- a/src/css/reservation-form/ReservationFormShared.css
+++ b/src/css/reservation-form/ReservationFormShared.css
@@ -18,6 +18,9 @@
 .reservation-form__input-label--no-margin {
   margin-bottom: 0; }
 
+.reservation-form__reservation-footer-price-container {
+  margin-bottom: 1rem; }
+
 .reservation-footer-price-container__total {
   font-size: var(--font-2-2); }
 
