--- a/src/css/reservation-form/StepTwo.css
+++ b/src/css/reservation-form/StepTwo.css
@@ -1,5 +1,6 @@
 .reservation-form__step-two {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   background-color: var(--color-white);
   box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
 
@@ -35,8 +36,11 @@
 
 @media only screen and (min-width: 768px) {
   .reservation-form__step-two {
-    grid-template-columns: 1fr 1fr;
+    flex-direction: row;
     border-radius: 6px; }
+
+  .step-two__outer-container {
+    width: 50%; }
 
   .step-two__form {
     padding: 2.5rem; } }
