Try to fix a bug with height on ReservationFormHome StepFour.

--- a/src/css/components.css
+++ b/src/css/components.css
@@ -29,6 +29,6 @@ body, p {
     border-radius: 6px; }
 
   .google-map-iframe {
-    min-height: auto; } }
+    min-height: 20rem; } }
 
 /*# sourceMappingURL=components.css.map */
