--- a/src/css/main.css
+++ b/src/css/main.css
@@ -179,7 +179,7 @@ body, p {
     border-radius: 6px; }
 
   .google-map-iframe {
-    min-height: auto; } }
+    min-height: 20rem; } }
 :root {
   --color-description: #9E9E9E;
   --color-button: #1F1D1D;
@@ -827,7 +827,8 @@ html {
   .step-two__form {
     padding: 2.5rem; } }
 .reservation-form__step-three {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   background-color: var(--color-white);
   box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09); }
 
@@ -872,11 +873,15 @@ html {
 
 @media only screen and (min-width: 768px) {
   .reservation-form__step-three {
-    grid-template-columns: 1fr 1fr;
+    flex-direction: row;
     border-radius: 6px; }
 
   .step-three__step-three-container {
+    width: 50%;
     padding: 2.5rem; }
+
+  .step-three__step-three__outer-container {
+    width: 50%; }
 
   .step-three__reservation-date-picker-container {
     grid-template-columns: 1fr 1fr;
