--- a/src/css/reservation-form/NewForm.css
+++ b/src/css/reservation-form/NewForm.css
@@ -18,11 +18,6 @@
 .new-form-step-two__header {
   font-size: var(--font-2-6); }
 
-.new-form__return-time-container {
-  grid-column-start: 2;
-  grid-column-end: 4;
-  align-items: center; }
-
 @media only screen and (min-width: 768px) {
   .new-form-step-two__outer-container {
     width: 100%;
@@ -31,6 +26,11 @@
     box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09);
     margin-top: -130px;
     padding: 2.5rem;
-    box-shadow: 0.5rem 1.25rem 1.75rem 0 rgba(0, 0, 0, 0.3); } }
+    box-shadow: 0.5rem 1.25rem 1.75rem 0 rgba(0, 0, 0, 0.3); }
+
+  .new-form__return-time-container {
+    grid-column-start: 2;
+    grid-column-end: 4;
+    align-items: center; } }
 
 /*# sourceMappingURL=NewForm.css.map */
