--- a/src/css/reservation-form/StepThree.scss
+++ b/src/css/reservation-form/StepThree.scss
@@ -57,6 +57,10 @@
     align-items: center;
 }
 
+.reservation-date-picker-container__am-container {
+    margin-right: 1rem;
+}
+
 @media only screen and (min-width: 768px) {
     .reservation-form__step-three {
         // grid-template-columns: 1fr 1fr;
