--- a/src/css/reservation-form/StepFour.scss
+++ b/src/css/reservation-form/StepFour.scss
@@ -1,6 +1,6 @@
 .reservation-form__step-four {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
+    // display: grid;
+    // grid-template-rows: 1fr 1fr;
     box-shadow: 0px 34px 64px rgba(0, 0, 0, 0.09);
 }
 
